--- a/resources/assets/admin/styles/_globals.scss
+++ b/resources/assets/admin/styles/_globals.scss
@@ -1650,7 +1650,6 @@ label.el-radio, label.el-checkbox {
   display: inline-flex;
   align-items: center;
   line-height: 1.2;
-  font-weight: 500;
   &.small{
     font-size: 13px;
   }
